UPDATE projects content + style

--- a/cookie_clicker.html
+++ b/cookie_clicker.html
@@ -54,33 +54,19 @@
                 </div>
             </div>
             <div class="project_content_smartphone_text">
-                <h2>Contexte</h2>
-                <!--<p>
-                    J'ai réalisé ce projet au cours de mon année de Licence Informatique dans le cadre d'un cours de Programmation Mobile.
-                    Il n'y avait pas de sujet imposé. Toutefois, il fallait intégrer certaines choses dans notre application comme le stockage des informations dans une base de données locale (intégrée dans le téléphone, sans passer par internet), les capteurs du téléphone
-                    Il fallait aussi prévoir un mode connecté et un mode non connecté.
-                </p>-->
-                <p>Todo</p>
+                <p>
+                    J'ai réalisé ce projet au cours de mon année de Licence Informatique dans le cadre d'un cours de Programmation Mobile Android.
+                    Dans ce projet, il fallait intégrer certaines choses dans notre application comme le stockage des informations dans une base de données locale (intégrée dans le téléphone) et utiliser les capteurs du téléphone.
+                </p>
 
-                <h2>Objectifs</h2>
-                <!--<p>
+                <p>
                     Pour ce projet, nous avons fait le choix de reprendre le jeu web "Cookie Clicker". Le principe est assez simple. Il suffit de taper sur un cookie pour obtenir encore plus de cookies.
                     L'objectif final étant d'avoir plus de cookies que les autres joueurs.
-                    Développement d'une application mobile Android avec le langage de programmation Java.
-                </p>-->
-                <p>Todo</p>
+                </p>
 
-                <h2>Bilan</h2>
-                <!--<p>
+                <p>
                     Ce projet a consitué mon premier projet mobile. Suite à ce projet, je me suis découvert une attirance pour le domaine du développement d'applications mobiles.
                 </p>
-                <p>
-                    Plusieurs contraintes ont été imposées par l'enseignant (internationalisation, utilisation de fragments, utilisation d'un service, mode d'affichage en portrait et en paysage...).
-                </p>-->
-                <p>Todo</p>
-
-                
-                
             </div>
         </div>
     </div>
