--- a/index.html
+++ b/index.html
@@ -65,19 +65,16 @@
                 <div class="presentation_txt">
                     <p>
                         Bonjour ! Je m'appelle Corentin et j'ai 22 ans.
-                    </p>
-                    <p>
+                        <br>
                         Je suis actuellement étudiant en 2<sup>e</sup> année de Master Informatique à Orléans.
                         Cette formation s'articule autour du développement mobile, de l'intelligence artificielle et de la sécurité.
                     </p>
                     <p>
                         Après avoir découvert le développement d'applications Android en licence, je me suis découvert une attirance pour le développement mobile.
                         J'ai ainsi pu créer de nombreux projets durant mes études et sur mon temps libre.
+                        <br>
+                        Pour plus de détails me concernant, je vous laisse consulter mon CV et mes projets. Bonne visite !
                     </p>
-                    <p>
-                        Pour plus de détails me concernant, je vous laisse consulter mon CV et mes projets.
-                    </p>
-                    <p>Bonne visite !</p>
                 <div class="download_btn">
                     <a href="annexes/cv.pdf" target="_blank"><span><strong>mon cv</strong></span></a>
                 </div>
@@ -268,11 +265,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master informatique.
-                        </p>
-                        <p>
-                            Le but était de réaliser un jeu en ligne sur Android basé sur la localisation de l'utilisateur. 
-                            Dans ce jeu, on incarne un chercheur de trésors qui peut creuser un trou là où il se trouve et, selon notre chance, il est possible de déterrer des minéraux, voire des artefacts anciens et précieux.
+                            Application mobile Android sous la forme d'un jeu en ligne basé sur la localisation de l'utilisateur.
+                            Dans ce jeu, on incarne un chercheur de trésors qui peut creuser un trou et ainsi déterrer des minéraux, voire des artefacts anciens et précieux.
                         </p>
                     </div>
                     <div class="project_more">
@@ -297,11 +291,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile multiplateforme réalisée lors de ma 1<sup>re</sup> année de Master informatique.
-                        </p>
-                        <p>
-                            Cette application permet de consulter les différents événements prévus pour les Journées Portes Ouvertes de l'Université d'Orléans.
-                            Il est possible de visualiser ces événements sur une carte et les ajouter en favoris pour ainsi être alerté par notification avant qu'ils ne commencent.
+                            Application mobile multiplateforme permet de consulter les différents événements prévus pour les Journées Portes Ouvertes de l'Université d'Orléans.
+                            Il est possible de visualiser ces événements sur une carte et de les ajouter en favoris pour être alerté avant qu'ils ne commencent.
                         </p>
                     </div>
                     <div class="project_more">
@@ -326,13 +317,9 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile multiplateforme réalisée lors de ma 1<sup>re</sup> année de Master informatique.
-                        </p>
-                        <p>
-                            Le but de cette application et de permettre à l'utilisateur de gérer une liste de tâches à faire.
-                            Il peut ainsi créer une tâche, la modifier ou la supprimer.
-                            Chaque tâche dispose d'un titre, d'une date et d'une description mais il est aussi possible d'ajouter un lieu.
-                            On a alors la possibilité de voir le lieu sur une carte ainsi que la météo actuelle.
+                            Application mobile multiplateforme qui permet de gérer une liste de tâches à faire.
+                            On peut alors créer une tâche, la modifier ou la supprimer.
+                            Chaque tâche dispose d'un titre, d'une date et d'une description mais il est aussi possible d'ajouter un lieu visible sur une carte et avoir la météo.
                         </p>
                     </div>
                     <div class="project_more">
@@ -358,13 +345,8 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile Android réalisée lors de ma 1<sup>re</sup> année de Master informatique.
-                        </p>
-                        <p>
-                            Le but était de concevoir le jeu "Petit ou Grand" en utilisant l'API OpenGL ES.
-                            Ce jeu de cartes repose sur un système de pari entre deux joueurs où chacun dispose d'une pile de carte.
-                            Le joueur qui joue doit déterminer si la carte qu'il va piocher est supérieure, inférieure ou égale à la carte actuellement retournée
-                            S'il trouve alors il peut continuer à jouer en fonction de la dernière carte trouvée, sinon il doit passer la main. 
+                            Application mobile Android sous la forme d'un jeu de pari entre 2 joueurs.
+                            L'objectif est de déviner la carte qu'on va piocher et si on trouve alors on peu continuer à piocher jusqu'à vider sa pile de cartes.
                             Le premier joueur qui vide sa pile de cartes gagne.
                         </p>
                     </div>
@@ -390,12 +372,9 @@
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile Android réalisée lors de ma 3<sup>e</sup> année de Licence informatique.
-                        </p>
-                        <p>
+                            Application mobile Android qui se base sur un jeu de clicker. 
                             Le principe du jeu est d'appuyer sur le cookie afin d'augmenter son score.
                             Une fois que atteignez un certain score, vous pouvez alors débloquer de nouvelles améliorations pour faire grimper votre nombre de cookies.
-                            Le but étant d'avoir plus de cookies que vos amis!
                         </p>
                     </div>
                     <div class="project_more">
@@ -414,21 +393,18 @@
                             <h3><strong>TicTacToe (en cours)</strong></h3>
                             <div class="project_label">
                                 <span>Android</span>
-                                <span>Java / Kotlin</span>
+                                <span>Kotlin</span>
                             </div>
                         </div>
                     </div>
                     <div class="project_desc">
                         <p>
-                            Application mobile Android réalisée sur mon temps libre.
-                        </p>
-                        <p>
-                            Cette application reprend le jeu du morpion.
-                            Il est possible d'affronter vos amis sur votre téléphone mais si vous êtes seul vous pouvez alors vous mesurer face à l'ordinateur (qui repose sur un algorithme d'Intelligence Artificielle).
+                            Application mobile Android qui reprend le jeu du morpion.
+                            Cette application vous permet d'affronter vos amis sur votre téléphone mais si vous êtes seul vous pouvez alors vous confronter à une Intelligence Artificiel qui ne vous laissera aucune chance !
                         </p>
                     </div>
-                    <div class="project_more">
-                        <a id="hidden_projects_btn" href="tictactoe.html">Voir plus</a>
+                    <div class="project_more disabled">
+                        <a href="#">Voir plus</a>
                     </div>
                 </div>    
             </div>
