--- a/motherload.html
+++ b/motherload.html
@@ -54,7 +54,6 @@
                 </div>
             </div>
             <div class="project_content_smartphone_text">
-                <h2>Contexte</h2>
                 <p>
                     J'ai réalisé ce projet au cours de ma 1<sup>re</sup> année de Master Informatique dans le cadre d'un cours de développement natif Android.
                     <br>
@@ -65,15 +64,13 @@
                     Il est aussi possible d'observer les autres joueurs à l'aide d'une carte qui affiche la position des joueurs en temps réel.
                 </p>
 
-                <h2>Objectifs</h2>
                 <p>
-                    Nous avions à notre disposition un serveur avec différents web services écrits en PHP par notre professeur.
+                    Nous avions à notre disposition un serveur avec différents web services écrits en PHP.
                     <br>
                     L'objectif du projet était d'envoyer les données aux différents web services (ex : coordonnées GPS pour creuser) et attendre la réponse du serveur (objet trouvé ou non trouvé).
                     Nous devions ensuite développer une application agréable à utiliser pour jouer au jeu.
                 </p>
 
-                <h2>Bilan</h2>
                 <p>
                     Après le projet j'ai demandé à l'enseignant s'il pouvait me mettre à disposition le code de son serveur et des différents web services pour que je puisse l'héberger moi-même et ainsi continuer de faire fonctionner le jeu.
                     <br>
