--- a/tictactoe.html
+++ b/tictactoe.html
@@ -54,22 +54,13 @@
                 </div>
             </div>
             <div class="project_content_smartphone_text">
-                <h2>Contexte</h2>
-                <!--<p>
-                    J'ai réalisé ce projet sur mon temps libre.
-                </p>-->
-                <p>Todo</p>
-
-                <h2>Objectifs</h2>
-                <!--<p>
-                    Mettre en place le jeu du morpion sur téléphone Android.
-                    Algo vu en IA (min-max)
-                </p>-->
-                <p>Todo</p>
-
-                <h2>Bilan</h2>
                 <p>
-                    Todo
+                    J'ai réalisé ce projet sur mon temps libre.
+                    Mon objectif était de reprendre le jeu du morpion mais sur support mobile.
+                </p>
+                <p>
+                    Après avoir suivi le cours d'Intelligence Artificielle lors de ma 1<sup>re</sup> année de Master, j'ai souhaité mettre en place un algorithme vu en cours.
+                    J'ai alors repris cet algorithme (min-max) pour qu'on puisse jouer contre l'IA.
                 </p>
             </div>
         </div>
