--- a/todolist.html
+++ b/todolist.html
@@ -54,27 +54,27 @@
                 </div>
             </div>
             <div class="project_content_smartphone_text">
-                <h2>Contexte</h2>
                 <p>
                     Ce projet a été réalisé durant ma 1<sup>re</sup> année de Master Informatique dans le cadre du cours de Développement Multiplateforme.
                     Le projet consistait à réaliser une ToDoList (liste de tâches à faire) en utilisant le framework vu en cours : Flutter.
                 </p>
 
-                <h2>Objectifs</h2>
                 <p>
                     L'application doit permettre à l'utilisateur de créer une tâche à partir d'un titre. Il a aussi la possibilité de choisir une date, ajouter une description et un lieu.
                     <br>
                     Une fois la tâche créée, elle s'ajoute à la liste des tâches. L'utilisateur peut alors modifier ou supprimer les tâches de son choix.
                     De plus, lorsqu'un lieu a été défini pour la tâche, on affiche ce dernier sur une carte ainsi que la météo en utilisant l'API OpenWeatherMap.
                     <br>
-                    Dans les fonctionnalités, il y a aussi la possibilité de définir une tâche prioritaire ou bien de la marquer comme terminée.
+                    Une tâche peut aussi être définie comme prioritaire ou bien terminée par l'utilisateur.
                     
                     Dans les paramètres de l'application, il est possible de changer la langue, le thème et le tri de la liste des tâches.
                     L'utilisateur peut aussi choisir s'il veut ou non afficher les tâches terminées
                 </p>
 
-                <h2>Bilan</h2>
-                <p>Ce projet nous a permis de nous familiariser avec le framework Flutter.</p>
+                <p>
+                    Ce projet m'a permis de me familiariser avec le framework Flutter.
+                    J'ai aussi pu découvrir des fonctionnalités que je ne connaissais pas comme l'API météo ou bien des librairies Flutter qui permettent de changer la langue ou le thème de l'application.
+                </p>
             </div>
         </div>
     </div>
