ADD Competences + Dyanmic age + UPDATE EXP styles

--- a/index.html
+++ b/index.html
@@ -64,10 +64,8 @@
             <div class="presentation_txt_container slideElementFromRight">
                 <div class="presentation_txt">
                     <p>
-                        Bonjour ! Je m'appelle Corentin et j'ai 22 ans.
-                        <br>
-                        Je suis actuellement étudiant en 2<sup>e</sup> année de Master Informatique à Orléans.
-                        Cette formation s'articule autour du développement mobile, de l'intelligence artificielle et de la sécurité.
+                        Bonjour ! Je m'appelle Corentin et j'ai <span class="age"></span> ans. <br />
+                        Jeune diplômé d'un Master Informatique... Cette formation s'articule autour du développement mobile, de l'intelligence artificielle et de la sécurité.
                     </p>
                     <p>
                         Après avoir découvert le développement d'applications Android en licence, je me suis découvert une attirance pour le développement mobile.
@@ -160,8 +158,8 @@
             </div>
 
             <div class="skill_box tools skill_pop skill_box_tooltip">
-                <img src="annexes/icons/icon_intellij.png" draggable="false">
-                <span class="tooltiptext">IntelliJ</span>
+                <img src="annexes/icons/icon_react_native.png" draggable="false">
+                <span class="tooltiptext">React Native</span>
             </div>
 
             <div class="skill_box tools skill_pop skill_box_tooltip">
@@ -170,8 +168,13 @@
             </div>
 
             <div class="skill_box tools skill_pop skill_box_tooltip">
-                <img src="annexes/icons/icon_github_desktop.png" draggable="false">
+                <img src="annexes/icons/icon_github.png" draggable="false">
                 <span class="tooltiptext">GitHub</span>
+            </div>
+
+            <div class="skill_box tools skill_pop skill_box_tooltip">
+                <img src="annexes/icons/icon_figma.png" draggable="false">
+                <span class="tooltiptext">Figma</span>
             </div>
 
             <div class="skill_box tools skill_pop skill_box_tooltip">
@@ -192,17 +195,42 @@
 
         <div class="experiences_container">
             <div class="line"></div>
-            <div class="circle exp1"></div>
-            <div class="circle exp2"></div>
+            <div class="bullet bullet_exp_1"></div>
+            <div class="bullet bullet_exp_2"></div>
+            <div class="bullet bullet_exp_3"></div>
 
-            <div class="experience_box exp1 slideElementFromLeft">
+            <!-- ImageImages -->
+            <div class="exp_box exp1 slideElementFromLeft">
                 <div class="experience_header">
                     <div>
-                        <h2 class="experience_title">Stage L3</h2>
+                        <h2 class="experience_title">Stage Master</h2>
+                        <h3 class="experience_subtitle">ImageImages, Tours</h3>
+                    </div>
+                    <div>
+                        <img src="annexes/logo_imageimages.png" draggable="false" />
+                    </div>
+                </div>
+                <div class="experience_desc">
+                    <p>
+                        Stage de fin de Master dans le domaine du développement mobile.
+                        Refonte de l'application mobile Caravel Learner (serious game de
+                        formation touristique)
+                    </p>
+                </div>
+                <div class="project_more">
+                    <a href="annexes/rapport_imageimages.pdf" target="_blank">Rapport</a>
+                </div>
+            </div>
+
+            <!-- Neolink -->
+             <div class="exp_box exp2 slideElementFromRight">
+                <div class="experience_header">
+                    <div>
+                        <h2 class="experience_title">Stage Licence</h2>
                         <h3 class="experience_subtitle">Néolink, Blois</h3>
                     </div>
                     <div>
-                        <img src="annexes/icons/icon_neolink.png" draggable="false">
+                        <img src="annexes/neolink_logo.png" draggable="false" />
                     </div>
                 </div>
                 <div class="experience_desc">
@@ -217,14 +245,15 @@
                 </div>
             </div>
 
-            <div class="experience_box exp2 slideElementFromRight">
+            <!-- CNRS -->
+            <div class="exp_box exp3 slideElementFromLeft">
                 <div class="experience_header">
                     <div>
                         <h2 class="experience_title">Stage DUT</h2>
                         <h3 class="experience_subtitle">CNRS, Orléans</h3>
                     </div>
                     <div>
-                        <img src="annexes/icons/icon_cnrs.png" draggable="false">
+                        <img src="annexes/icons/icon_cnrs.png" draggable="false" />
                     </div>
                 </div>
                 <div class="experience_desc">
@@ -237,8 +266,6 @@
                     <a href="annexes/rapport_cnrs.pdf" target="_blank">Rapport</a>
                 </div>
             </div>
-
-            
         </div>
     </div>
 
