ADD mon_allocine project

--- a/index.html
+++ b/index.html
@@ -362,6 +362,38 @@
           <div class="project_box popElement">
             <div class="project_header">
               <div class="project_logo">
+                <img
+                  src="annexes/icons/icon_monallocine.png"
+                  draggable="false"
+                />
+              </div>
+              <div class="project_details">
+                <h3><strong>Mon Allcociné</strong></h3>
+                <div class="project_label">
+                  <span>iOS</span>
+                  <span>Swift</span>
+                </div>
+              </div>
+            </div>
+            <div class="project_desc">
+              <p>
+                Application mobile iOS qui permet de rechercher des films et
+                séries. Pour chaque résultat, on peut visualiser les
+                informations comme le genre, le résumé et le casting. Il est
+                aussi possible d'ajouter des films et séries en favoris et de
+                les noter.
+              </p>
+            </div>
+            <div class="project_more">
+              <a href="mon_allocine.html">Voir plus</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="project_container">
+          <div class="project_box popElement">
+            <div class="project_header">
+              <div class="project_logo">
                 <img src="annexes/icons/icon_jpo.jpg" draggable="false" />
               </div>
               <div class="project_details">
@@ -387,7 +419,7 @@
           </div>
         </div>
 
-        <div class="project_container">
+        <div id="hidden_project" class="project_container">
           <div class="project_box popElement">
             <div class="project_header">
               <div class="project_logo">
