ADD Google Analytics

--- a/index.html
+++ b/index.html
@@ -14,9 +14,19 @@
     <link href="style_mobile.css" rel="stylesheet" />
     <script src="script.js" defer></script>
     <title>Corentin Rio</title>
+    <!-- Google Tag Manager -->
+    <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+    new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+    j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+    'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+    })(window,document,'script','dataLayer','GTM-P5CPCX6N');</script>
+    <!-- End Google Tag Manager -->
   </head>
 
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P5CPCX6N" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <nav>
       <a href="#">Accueil</a>
       <a href="#presentation">Présentation</a>
@@ -572,6 +582,7 @@
       <div class="copyright">
         &copy; <span class="year"></span> | Corentin Rio
       </div>
+      <a class="legal_notice" href="legal_notice.html" target="_blank">Mentions légales</a>
     </footer>
   </body>
 </html>
