--- a/cookie_clicker.html
+++ b/cookie_clicker.html
@@ -55,17 +55,12 @@
             </div>
             <div class="project_content_smartphone_text">
                 <p>
-                    J'ai réalisé ce projet au cours de mon année de Licence Informatique dans le cadre d'un cours de Programmation Mobile Android.
-                    Dans ce projet, il fallait intégrer certaines choses dans notre application comme le stockage des informations dans une base de données locale (intégrée dans le téléphone) et utiliser les capteurs du téléphone.
-                </p>
-
-                <p>
-                    Pour ce projet, nous avons fait le choix de reprendre le jeu web "Cookie Clicker". Le principe est assez simple. Il suffit de taper sur un cookie pour obtenir encore plus de cookies.
+                    Ce projet reprend le jeu web "Cookie Clicker". Le principe est assez simple. Il suffit de taper sur un cookie pour obtenir encore plus de cookies.
                     L'objectif final étant d'avoir plus de cookies que les autres joueurs.
                 </p>
 
                 <p>
-                    Ce projet a consitué mon premier projet mobile. Suite à ce projet, je me suis découvert une attirance pour le domaine du développement d'applications mobiles.
+                    Cette application utilise la lecture de documents et la caméra pour définir une image de profil. Les données relative au compte utilisateur sont stockées en local dans une base de données SQLite.
                 </p>
             </div>
         </div>
