--- a/index.html
+++ b/index.html
@@ -76,21 +76,21 @@
             <p>
               Bonjour ! Je m'appelle Corentin et j'ai
               <span class="age"></span> ans. <br />
+            </p>
+
+            <p>
               Après avoir découvert le développement d'applications Android en
-              licence, je me suis découvert une attirance pour le développement
-              mobile.
+              licence, je me suis découvert une attirance pour ce domaine.
             </p>
 
             <p>
-              Lors de mon Master informatique, j'ai ainsi eu l'occasion de
-              concevoir des applications natives pour Android et iOS. Par
-              ailleurs, j'ai aussi découvert le développement multiplateforme
-              avec Flutter et React Native.
+              Lors de mon master informatique, j'ai acquis de solides compétences en développement mobile, notamment
+              à travers la création d'applications natives Android et iOS. J'ai également conçu des applications cross-platform 
+              à l'aide des frameworks Flutter et React Native.
             </p>
 
             <p>
-              Pour plus de détails me concernant, je vous laisse consulter mon
-              CV et mes projets. Bonne visite !
+               Je vous invite à consulter mon CV et mes projets pour plus de détails. Bonne visite !
             </p>
             <div class="download_btn">
               <a href="annexes/cv.pdf" target="_blank"
@@ -229,8 +229,7 @@
           </div>
           <div class="experience_desc">
             <p>
-              Stage de fin de Master dans le domaine du développement mobile.
-              Refonte de l'application mobile Caravel Learner (serious game de
+              Refonte complète en autonomie de l'application mobile Caravel Learner (serious game de
               formation touristique)
             </p>
           </div>
@@ -254,10 +253,8 @@
           </div>
           <div class="experience_desc">
             <p>
-              Stage de fin de Licence dans le domaine de l'informatique. Lors de
-              cette expérience, j'ai notamment pu effectuer de la maintenance
-              (résolution de bugs) en PHP sur le framework de l'entreprise. J'ai
-              travaillé auprès de développeurs web front et back.
+              Prise en charge de tickets de maintenance, résolution de bugs et  
+              développement de fonctionnalités back-end en PHP sur un framework maison
             </p>
           </div>
           <div class="project_more">
@@ -278,11 +275,8 @@
           </div>
           <div class="experience_desc">
             <p>
-              Stage de fin de DUT dans le domaine de la communication. J'ai
-              notamment eu à réaliser la charte graphique et des visuels
-              (roll-up, dépliant...) afin de lancer la stratégie de
-              communication pour le projet scientifique MATEX porté par le CNRS
-              et la région Centre-Val de Loire.
+              Elaboration en toute autonomie de l'identité visuelle pour le lancement de la  
+              plateforme MATEX avec une charte graphique et différents supports print.
             </p>
           </div>
           <div class="project_more">
@@ -312,11 +306,8 @@
             </div>
             <div class="project_desc">
               <p>
-                Application mobile multiplateforme réalisée dans le cadre d'un
-                stage de fin d'études de 6 mois. J'ai principalement travaillé
-                sur la refonte de l'application en proposant une interface plus
-                moderne et ludique. Cette application est un serious game de
-                formation touristique.
+                Application mobile cross-platform destinée à former de manière ludique les professionnels de l'accueil à la recommandation touristique.
+                Sur ce projet, j'ai corrigé les bugs critiques et mis à jour l'interface utilisateur pour la rendre plus intuitive et ludique.
               </p>
             </div>
             <div class="project_more">
@@ -349,7 +340,7 @@
                 Application mobile Android sous la forme d'un jeu en ligne basé
                 sur la localisation de l'utilisateur. Dans ce jeu, on incarne un
                 chercheur de trésors qui peut creuser un trou et ainsi déterrer
-                des minéraux, voire des artefacts anciens et précieux.
+                des minéraux ou des artefacts précieux.
               </p>
             </div>
             <div class="project_more">
@@ -406,11 +397,9 @@
             </div>
             <div class="project_desc">
               <p>
-                Application mobile multiplateforme permet de consulter les
+                Application mobile cross-platform qui permet de consulter les
                 différents événements prévus pour les Journées Portes Ouvertes
-                de l'Université d'Orléans. Il est possible de visualiser ces
-                événements sur une carte et de les ajouter en favoris pour être
-                alerté avant qu'ils ne commencent.
+                de l'Université d'Orléans. Il est possible d'ajouter un événement en favoris pour être alerté avant qu'il ne commence.
               </p>
             </div>
             <div class="project_more">
@@ -435,11 +424,10 @@
             </div>
             <div class="project_desc">
               <p>
-                Application mobile multiplateforme qui permet de gérer une liste
+                Application mobile cross-platform qui permet de gérer une liste
                 de tâches à faire. On peut alors créer une tâche, la modifier ou
-                la supprimer. Chaque tâche dispose d'un titre, d'une date et
-                d'une description mais il est aussi possible d'ajouter un lieu
-                visible sur une carte et avoir la météo.
+                la supprimer. Il est aussi possible d'ajouter un lieu
+                visible sur une carte et de récupérer la météo à l'aide d'une API.
               </p>
             </div>
             <div class="project_more">
@@ -464,11 +452,9 @@
             </div>
             <div class="project_desc">
               <p>
-                Application mobile Android qui se base sur un jeu de clicker. Le
-                principe du jeu est d'appuyer sur le cookie afin d'augmenter son
-                score. Une fois que atteignez un certain score, vous pouvez
-                alors débloquer de nouvelles améliorations pour faire grimper
-                votre nombre de cookies.
+                Application mobile Android sous la forme d'un jeu de clicker. Le
+                principe du jeu est d'appuyer sur un cookie afin d'augmenter son
+                score et débloquer des améliorations afin de générer toujours plus de cookies.
               </p>
             </div>
             <div class="project_more">
