--- a/motherload.html
+++ b/motherload.html
@@ -55,28 +55,21 @@
             </div>
             <div class="project_content_smartphone_text">
                 <p>
-                    J'ai réalisé ce projet au cours de ma 1<sup>re</sup> année de Master Informatique dans le cadre d'un cours de développement natif Android.
-                    <br>
-                    Cette application est un mini-jeu qui nécessite la géolocalisation du téléphone et un accès internet.
-                    Si l'utilisateur se trouve dans le campus de l'Université d'Orléans, il peut creuser pour espérer trouver des objets.
-                    Avec ces objets il peut améliorer la qualité de ses outils pour creuser encore plus profond.
-                    Lorsqu'il a amassé assez d'objets rares, il peut les mettre en vente dans le magasin afin que les autres joueurs puissent les acheter.
-                    Il est aussi possible d'observer les autres joueurs à l'aide d'une carte qui affiche la position des joueurs en temps réel.
+                    Cette application est un jeu qui nécessite la géolocalisation du téléphone et un accès internet.
                 </p>
 
                 <p>
-                    Nous avions à notre disposition un serveur avec différents web services écrits en PHP.
-                    <br>
-                    L'objectif du projet était d'envoyer les données aux différents web services (ex : coordonnées GPS pour creuser) et attendre la réponse du serveur (objet trouvé ou non trouvé).
-                    Nous devions ensuite développer une application agréable à utiliser pour jouer au jeu.
+                    L'objectif est de creuser pour espérer trouver des objets.
+                    Avec ces objets on peut améliorer la qualité de notre outil pour creuser encore plus profond.
                 </p>
 
                 <p>
-                    Après le projet j'ai demandé à l'enseignant s'il pouvait me mettre à disposition le code de son serveur et des différents web services pour que je puisse l'héberger moi-même et ainsi continuer de faire fonctionner le jeu.
-                    <br>
-                    J'ai aussi eu plusieurs idées d'améliorations à la suite du projet.
-                    Sur mon temps libre, j'ai alors corrigé quelques erreurs provenant du serveur et j'ai développé de nouvelles fonctionnalités.
-                    Par exemple, l'ajout d'un avatar pour mieux identifier les joueurs sur la carte.
+                    Lorsqu'on amasse assez d'objets rares, on peut les mettre en vente dans le magasin afin que les autres joueurs puissent les acheter.
+                    Il est aussi possible d'observer les autres joueurs à l'aide d'une carte qui affiche leur position en temps réel.
+                </p>
+
+                <p>
+                    Ce jeu fonctionne grâce à différents web services écrits en PHP et une base de données MySQL.
                 </p>
             </div>
         </div>
