--- a/todolist.html
+++ b/todolist.html
@@ -55,25 +55,26 @@
             </div>
             <div class="project_content_smartphone_text">
                 <p>
-                    Ce projet a été réalisé durant ma 1<sup>re</sup> année de Master Informatique dans le cadre du cours de Développement Multiplateforme.
-                    Le projet consistait à réaliser une ToDoList (liste de tâches à faire) en utilisant le framework vu en cours : Flutter.
+                    Cette application permet de créer une tâche à partir d'un titre. On peut aussi ajouter des informations complémentaires (date, description, lieu).
                 </p>
 
                 <p>
-                    L'application doit permettre à l'utilisateur de créer une tâche à partir d'un titre. Il a aussi la possibilité de choisir une date, ajouter une description et un lieu.
-                    <br>
-                    Une fois la tâche créée, elle s'ajoute à la liste des tâches. L'utilisateur peut alors modifier ou supprimer les tâches de son choix.
-                    De plus, lorsqu'un lieu a été défini pour la tâche, on affiche ce dernier sur une carte ainsi que la météo en utilisant l'API OpenWeatherMap.
-                    <br>
-                    Une tâche peut aussi être définie comme prioritaire ou bien terminée par l'utilisateur.
-                    
-                    Dans les paramètres de l'application, il est possible de changer la langue, le thème et le tri de la liste des tâches.
-                    L'utilisateur peut aussi choisir s'il veut ou non afficher les tâches terminées
+                    Lorsqu'un lieu est défini, celui-ci est affiché sur une carte, accompagné de la météo correspondante, récupérée via l'API OpenWeatherMap.
                 </p>
 
                 <p>
-                    Ce projet m'a permis de me familiariser avec le framework Flutter.
-                    J'ai aussi pu découvrir des fonctionnalités que je ne connaissais pas comme l'API météo ou bien des librairies Flutter qui permettent de changer la langue ou le thème de l'application.
+                    Une fois la tâche créée, elle s'ajoute à la liste des tâches. On peut ensuite la consulter, la modifier ou bien la supprimer.
+                </p>
+
+                <p>
+                   Lors de sa création, une tâche peut être définie comme prioritaire, pour permettre de la distinguer visuellement des tâches classiques. 
+                   Lorsqu'une tâche est terminée, son apparence est automatiquement modifiée.
+                </p>
+                
+                <p>
+                    Enfin, dans les paramètres de l'application, on peut trier les tâches par date, par ordre de priorité ou par date de création.
+                    Un filtre permet d'afficher ou non les tâches terminées.
+                    Enfin, on peut aussi changer le thème (sombre / clair) et la langue (français, anglais, espagnol).
                 </p>
             </div>
         </div>
