--- a/jpo_orleans.html
+++ b/jpo_orleans.html
@@ -55,26 +55,16 @@
             </div>
             <div class="project_content_smartphone_text">
                 <p>
-                    Ce projet a été réalisé lors de ma 1<sup>re</sup> année de Master Informatique dans le module des projets TER (Travaux d'Etudes et de Recherche).
-                    Il nous a été demandé de réaliser une application de planification d'événements pour les Journées Portes ouvertes de l'université d'Orléans.
-                    <br>
-                    Parmi les fonctionnalités attendues, il y avait la gestion des horaires des présentations, la
-                    localisation des stands, des notifications pour recevoir des alertes en temps réel et un 
-                    système de cartographie pour faciliter la navigation dans le lieu de l'événement.
+                    Ce projet est une application de planification d'événements pour les Journées Portes Ouvertes de l'université d'Orléans.
                 </p>
 
                 <p>
-                    Pour ce projet, nous avons fait le choix d'utiliser le framework Flutter afin de développer une application à la fois compatible sur Android et iOS à partir d'une seule base de code.
-                    <br>
-                    Nous avions à notre disposition les maquettes de l'ancienne application (réalisée avec Angular et Ionic) ainsi que le fichier qui contenait toutes les données de l'année passée (événements, horaires, lieux...) en format JSON.
-                    <br>
-                    A partir de ces informations, nous avons pu créer des maquettes sur Figma et ainsi développer une interface intuitive et ergonomique avec Flutter.
+                    Pour chaque événement, on a la possibilité de consulter les horaires des présentations et la localisation des stands. 
+                    On peut aussi recevoir des alertes en temps réel (notifications) pour les événements ajoutés en favoris.
                 </p>
 
                 <p>
-                    Ce projet a permis à notre équipe d'acquérir une compréhension approfondie du framework Flutter et de son fonctionnement pour le développement d'applications mobiles.
-                    Celà nous a aussi permi de renforcer notre capacité à travailler en équipe et à communiquer efficacement, des compétences essentielles dans le milieu professionnel.
-                    Nous avons également appris à gérer les imprévus, en adaptant notre planning et nos méthodes de travail pour respecter les délais imposés.
+                    Les données associées aux événements sont chargées depuis un fichier JSON directement inclus dans l'application (dossier "assets").
                 </p>
             </div>
         </div>
